# rpnshell

./: .gitignore  .hgignore  AUTHORS  COPYING  Makefile.am  README  bootstrap.sh  configure.ac  rpnshell.pc.in
doc/: conf.py.in  index.rst
include/: Makefile.am  plugin.h  rpn_stack.h
lib/: Makefile.am  rpn_operators.h  rpn_stack.c  rpn_stack.h
plugins/: Makefile.am  core.c  core.lo  helpers.c
src/: Makefile.am  main.c  plugin.h  plugins.c  plugins.h  rpn_operators.c  rpn_operators.h  rpn_stack.c  rpn_stack.h  rpnshell.c
