#
# rpnshell: A RPN-based calculator to the command-line interface.
# Copyright (C) 2010-2011 Rafael G. Martins <rafaelmartins@gentoo.org>
#
# This program can be distributed under the terms of the BSD License.
# See the file COPYING.
#

SUBDIRS = lib plugins src
EXTRA_DIST = bootstrap.sh
ACLOCAL_AMFLAGS = -I m4
